@@ -1,8 +1,6 @@
 // PR c++/18378
 // NOTE: This test assumes packed structure layout differs from unpacked
-//       structure layout.  This isn't true, e.g., with the default
-//       arm-none-elf options.
-// { dg-options "-mstructure-size-boundary=8" { target arm*-*-* } }
+//       structure layout.
 
 class A
 {
